optredens toevoegen en verwijderen werkt, validatie met gefixt worden

--- a/src/main/resources/templates/wijzigplanning.html
+++ b/src/main/resources/templates/wijzigplanning.html
@@ -52,9 +52,74 @@
 
       <div
         th:if="${message}"
-        class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mb-4"
+        class="px-4 py-3 bg-green-400 text-white flex justify-between rounded mb-4"
       >
-        <span class="block sm:inline" th:text="${message}"></span>
+        <div class="flex items-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-7 w-7 mr-6"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+          >
+            <path
+              d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z"
+            />
+          </svg>
+          <p th:text="${message}"></p>
+        </div>
+        <button class="text-green-100 hover:text-white">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M6 18L18 6M6 6l12 12"
+            />
+          </svg>
+        </button>
+      </div>
+
+      <div
+        th:if="${errormessage}"
+        class="px-8 py-6 bg-red-400 text-white flex justify-between rounded mb-4"
+      >
+        <div class="flex items-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-7 w-7 mr-6"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z"
+              clip-rule="evenodd"
+            />
+          </svg>
+          <p th:text="${errormessage}"></p>
+        </div>
+        <button class="text-red-100 hover:text-white">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M6 18L18 6M6 6l12 12"
+            />
+          </svg>
+        </button>
       </div>
 
       <table class="min-w-full leading-normal">
@@ -109,17 +174,27 @@
 
       <form
         th:action="@{/wijzigplanning/{festivalId}/addOptreden(festivalId=${festival.id})}"
+        th:object="${nieuwOptreden}"
         method="post"
         class="mt-8 bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"
       >
+        <input
+          type="hidden"
+          th:name="${_csrf.parameterName}"
+          th:value="${_csrf.token}"
+        />
         <div class="mb-4">
-          <label class="block text-gray-700 text-sm font-bold mb-2" for="naam"
-            >Naam</label
-          >
+          <label class="block text-gray-700 text-sm font-bold mb-2" for="naam">
+            Naam
+          </label>
+          <div th:if="${#fields.hasErrors('naam')}" th:errors="*${naam}">
+            Invalid naam
+          </div>
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             id="naam"
             name="naam"
+            th:field="*{naam}"
             type="text"
             placeholder="Naam van het optreden"
             required
@@ -129,14 +204,98 @@
           <label
             class="block text-gray-700 text-sm font-bold mb-2"
             for="startuur"
-            >Startuur</label
           >
+            Startuur
+          </label>
+          <div
+            th:if="${#fields.hasErrors('startuur')}"
+            th:errors="*${startuur}"
+          >
+            Invalid startuur
+          </div>
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             id="startuur"
             name="startuur"
+            th:field="*{startuur}"
             type="time"
-            placeholder="Startuur van het optreden"
+            required
+          />
+        </div>
+        <div class="mb-4">
+          <label
+            class="block text-gray-700 text-sm font-bold mb-2"
+            for="subgenres"
+          >
+            Subgenres
+          </label>
+
+          <div
+            th:if="${#fields.hasErrors('subgenreIds')}"
+            th:errors="*${subgenreIds}"
+          >
+            Invalid subgenres
+          </div>
+
+          <select
+            multiple
+            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+            id="subgenres"
+            name="subgenres"
+            th:field="*{subgenreIds}"
+          >
+            <option
+              th:each="subGenre : ${subGenres}"
+              th:value="${subGenre.id}"
+              th:text="${subGenre.naam}"
+            >
+              SubGenre
+            </option>
+          </select>
+        </div>
+        <div class="mb-4">
+          <label
+            class="block text-gray-700 text-sm font-bold mb-2"
+            for="festivalNummer1"
+          >
+            Festival Nummer 1
+          </label>
+          <div
+            th:if="${#fields.hasErrors('festivalNummer1')}"
+            th:errors="*${festivalNummer1}"
+          >
+            Invalid festivalNummer1
+          </div>
+          <input
+            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+            id="festivalNummer1"
+            name="festivalNummer1"
+            th:field="*{festivalNummer1}"
+            type="number"
+            placeholder="1000"
+            required
+          />
+        </div>
+        <div class="mb-4">
+          <label
+            class="block text-gray-700 text-sm font-bold mb-2"
+            for="festivalNummer2"
+          >
+            Festival Nummer 2
+          </label>
+          <div
+            th:if="${#fields.hasErrors('festivalNummer2')}"
+            th:errors="*${festivalNummer2}"
+          >
+            Invalid festivalNummer2
+          </div>
+          <input
+            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+            id="festivalNummer2"
+            name="festivalNummer2"
+            th:field="*{festivalNummer2}"
+            type="number"
+            placeholder="1000"
             required
           />
         </div>
