--- a/src/main/resources/templates/wijzigplanning.html
+++ b/src/main/resources/templates/wijzigplanning.html
@@ -85,43 +85,6 @@
         </button>
       </div>
 
-      <div
-        th:if="${errormessage}"
-        class="px-8 py-6 bg-red-400 text-white flex justify-between rounded mb-4"
-      >
-        <div class="flex items-center">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-7 w-7 mr-6"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z"
-              clip-rule="evenodd"
-            />
-          </svg>
-          <p th:text="${errormessage}"></p>
-        </div>
-        <button class="text-red-100 hover:text-white">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M6 18L18 6M6 6l12 12"
-            />
-          </svg>
-        </button>
-      </div>
-
       <table class="min-w-full leading-normal">
         <thead>
           <tr class="bg-gray-800 text-white">
@@ -187,9 +150,12 @@
           <label class="block text-gray-700 text-sm font-bold mb-2" for="naam">
             Naam
           </label>
-          <div th:if="${#fields.hasErrors('naam')}" th:errors="*${naam}">
-            Invalid naam
-          </div>
+          <div
+            th:if="${#fields.hasErrors('naam')}"
+            th:errorclass="error"
+            th:errors="*{naam}"
+            class="text-red-500 text-xs italic"
+          ></div>
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             id="naam"
@@ -197,7 +163,6 @@
             th:field="*{naam}"
             type="text"
             placeholder="Naam van het optreden"
-            required
           />
         </div>
         <div class="mb-4">
@@ -209,17 +174,17 @@
           </label>
           <div
             th:if="${#fields.hasErrors('startuur')}"
-            th:errors="*${startuur}"
-          >
-            Invalid startuur
-          </div>
+            th:errorclass="error"
+            th:errors="*{startuur}"
+            class="text-red-500 text-xs italic"
+          ></div>
+
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             id="startuur"
             name="startuur"
             th:field="*{startuur}"
             type="time"
-            required
           />
         </div>
         <div class="mb-4">
@@ -229,13 +194,12 @@
           >
             Subgenres
           </label>
-
           <div
             th:if="${#fields.hasErrors('subgenreIds')}"
-            th:errors="*${subgenreIds}"
-          >
-            Invalid subgenres
-          </div>
+            th:errorclass="error"
+            th:errors="*{subgenreIds}"
+            class="text-red-500 text-xs italic"
+          ></div>
 
           <select
             multiple
@@ -262,10 +226,11 @@
           </label>
           <div
             th:if="${#fields.hasErrors('festivalNummer1')}"
-            th:errors="*${festivalNummer1}"
-          >
-            Invalid festivalNummer1
-          </div>
+            th:errorclass="error"
+            th:errors="*{festivalNummer1}"
+            class="text-red-500 text-xs italic"
+          ></div>
+
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             id="festivalNummer1"
@@ -285,10 +250,11 @@
           </label>
           <div
             th:if="${#fields.hasErrors('festivalNummer2')}"
-            th:errors="*${festivalNummer2}"
-          >
-            Invalid festivalNummer2
-          </div>
+            th:errorclass="error"
+            th:errors="*{festivalNummer2}"
+            class="text-red-500 text-xs italic"
+          ></div>
+
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             id="festivalNummer2"
