alle vertaling toegevoegd

--- a/src/main/resources/templates/access-denied.html
+++ b/src/main/resources/templates/access-denied.html
@@ -46,7 +46,7 @@
     <form th:action="@{/logout}" method="post" class="logout-form">
       <button type="submit" class="logout-link">
         <i class="fas fa-sign-out-alt"></i>
-        <span class="tooltip" th:text="#{access-denied.btnLogOut}">Log uit</span>
+        <span class="tooltip" th:text="#{access-denied.btnLogOut}"></span>
       </button>
       <input
         type="hidden"
