--- a/src/main/resources/templates/mijnticketten.html
+++ b/src/main/resources/templates/mijnticketten.html
@@ -27,9 +27,11 @@
           th:if="${#authorization.expression('hasRole(''USER'')') and ticketsByUser.size() > 0}"
           class="text-white font-bold text-xl m-0"
         >
-          <a th:href="@{/mijnticketten}" class="hover:text-gray-400 m-0"
-            >Mijn ticketten</a
-          >
+          <a
+            th:href="@{/mijnticketten}"
+            class="hover:text-gray-400 m-0"
+            th:text="#{nav.MijnTicketten}"
+          ></a>
         </div>
 
         <form th:action="@{/logout}" method="post">
@@ -45,47 +47,41 @@
       </div>
     </nav>
     <section class="p-8">
-      <h1 class="text-center text-2xl uppercase font-semibold mb-5">
-        Mijn Ticketten:
-      </h1>
+      <h1
+        class="text-center text-2xl uppercase font-semibold mb-5"
+        th:text="#{mijnTicketten.titel}"
+      ></h1>
       <table class="min-w-full leading-normal">
         <thead>
           <tr class="bg-gray-800 text-white">
             <th
               class="px-5 py-3 border-b-2 border-gray-200 text-left text-xs font-semibold uppercase tracking-wider"
-            >
-              Naam
-            </th>
+              th:text="#{tabel.header.naam}"
+            ></th>
             <th
               class="px-5 py-3 border-b-2 border-gray-200 text-left text-xs font-semibold uppercase tracking-wider"
-            >
-              Datum & aanvangsuur
-            </th>
+              th:text="#{tabel.header.datumUur}"
+            ></th>
             <th
               class="px-5 py-3 border-b-2 border-gray-200 text-left text-xs font-semibold uppercase tracking-wider"
-            >
-              Planning
-            </th>
+              th:text="#{tabel.header.planning}"
+            ></th>
             <th
               class="px-5 py-3 border-b-2 border-gray-200 text-left text-xs font-semibold uppercase tracking-wider"
-            >
-              Regio
-            </th>
+              th:text="#{tabel.header.regio}"
+            ></th>
             <th
               class="px-5 py-3 border-b-2 border-gray-200 text-left text-xs font-semibold uppercase tracking-wider"
-            >
-              Muziekgenre
-            </th>
+              th:text="#{tabel.header.genre}"
+            ></th>
             <th
               class="px-5 py-3 border-b-2 border-gray-200 text-left text-xs font-semibold uppercase tracking-wider"
-            >
-              Prijs
-            </th>
+              th:text="#{tabel.header.prijs}"
+            ></th>
             <th
               class="px-5 py-3 border-b-2 border-gray-200 text-left text-xs font-semibold uppercase tracking-wider"
-            >
-              Aantal tickets
-            </th>
+              th:text="#{tabel.header.aantalTickets}"
+            ></th>
           </tr>
         </thead>
         <tbody>
@@ -101,7 +97,7 @@
               <span
                 th:text="${#temporals.format(ticket.festival.datum, 'dd-MM-yyyy')}"
               ></span>
-              om
+              <span th:text="#{tussenVoegselTijd}"></span>
               <span
                 th:text="${#temporals.format(ticket.festival.aanvangsuur, 'HH:mm')}"
               ></span>
