--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -27,8 +27,8 @@
           th:if="${#authorization.expression('hasRole(''USER'')') and ticketsByUser.size() > 0}"
           class="text-white font-bold text-xl m-0"
         >
-          <a th:href="@{/mijnticketten}" class="hover:text-gray-400 m-0"
-            >Mijn ticketten</a
+          <a th:href="@{/mijnticketten}" class="hover:text-gray-400 m-0" th:text="#{nav.MijnTicketten}"
+            ></a
           >
         </div>
 
@@ -45,11 +45,7 @@
       </div>
     </nav>
     <section class="p-8">
-      <p>
-        Dit is festival genaamd <span th:text="${festival.naam}"></span> <br />
-        Er zijn nog <span th:text="${aantalBeschikbareTickets}"></span> tickets
-        beschikbaar.
-      </p>
+      <p th:text="#{festival.info(${festival.naam}, ${aantalBeschikbareTickets})}"></p>
 
       <form th:action="@{/ticket/kopen}" method="post">
         <input
