--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,7 +30,13 @@
       >
         <div class="w-full py-6 z-20">
           <h1 class="my-6 text-4xl" th:text="#{login.page.title}"></h1>
+          <div th:if="${error}" class="text-red-400 text-sm">
+            <p th:text="${error}"></p>
+          </div>
 
+          <div th:if="${msg}" class="text-green-400 text-sm">
+            <p th:text="${msg}"></p>
+          </div>
           <form
             name="loginForm"
             th:action="@{/login}"
