final touches pt1

--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -63,6 +63,7 @@
           min="1"
           th:name="aantalTickets"
           th:max="${maxAantalTickets}"
+          required
         />
         <button type="submit" th:text="'Submit'"></button>
       </form>
